Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.11.2, 5.13.1
-
Fix Version/s: 5.15.0 Beta2
-
Component/s: Build System
-
Labels:None
-
Platform/s:
-
Commits:519ea72108fae7f5c4ed7c3e9fed3a999a16ed73 (qt/qtbase/5.15) 8bb3b3c4f1bf36eca3c173626c2300fc3c04fc15 (qt-creator/qt-creator/4.12)
Description
If I open a Qt project for Android in Android Studio 3.2 (current version) it shows following error:
The minSdk version should not be declared in the android manifest file. You can move the version from the manifest to the defaultConfig in the build.gradle file.
Open Manifest File
Move minSdkVersion to build file and sync project
QtCreator automatically puts the minSdkVersion to AndroidManifest.xml. This should be probably changed.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-23676 QtCreator requires deprecated minSdkVersion in AndroidManifest.xml and fails to build APK
-
- Closed
-