src/tools/androiddeployqt/main.cpp
@@ -169,6 +169,8 @@ struct Options
     // Versioning
     QString versionName;
     QString versionCode;
+    QByteArray minSdkVersion{"21"};
+    QByteArray targetSdkVersion{"28"};
 
     // lib c++ path
     QString stdCppPath;
@@ -847,6 +849,18 @@ bool readInputFile(Options *options)
             options->versionCode = androidVersionCode.toString();
         else
             options->versionCode = QStringLiteral("1");
+    }
+
+    {
+        const QJsonValue ver = jsonObject.value(QLatin1String("android-min-sdk-version"));
+        if (!ver.isUndefined())
+            options->minSdkVersion = ver.toString().toUtf8();
+    }
+
+    {
+        const QJsonValue ver = jsonObject.value(QLatin1String("android-target-sdk-version"));
+        if (!ver.isUndefined())
+            options->targetSdkVersion = ver.toString().toUtf8();
     }
 
     {
@@ -2298,6 +2312,8 @@ bool buildAndroidProject(const Options &options)
     gradleProperties["buildDir"] = "build";
     gradleProperties["qt5AndroidDir"] = (options.qtInstallDirectory + QLatin1String("/src/android/java")).toUtf8();
     gradleProperties["androidCompileSdkVersion"] = options.androidPlatform.split(QLatin1Char('-')).last().toLocal8Bit();
+    gradleProperties["qtMinSdkVersion"] = options.minSdkVersion;
+    gradleProperties["qtTargetSdkVersion"] = options.targetSdkVersion;
     if (gradleProperties["androidBuildToolsVersion"].isEmpty())
         gradleProperties["androidBuildToolsVersion"] = options.sdkBuildToolsVersion.toLocal8Bit();
 
